# rubbish-bin

./: #.gitignore#  .#.gitignore  .gitignore  README.md  q  test.py
AI/baidu/: Makefile
AI/hobot/: hobot_parse.c  hobot_parse.h
AI/null/: ai_engine.c
AI/speech/: ai_engine.c  ai_json_parser.h
IPC/dev-zero/: dev-zero.c
IPC/shm/: a.out  base-demo.c
Linux_Driver_Develop/ch7_concurrent/: Completion.c  mutex.c
Linux_Driver_Develop/globalmem/: .gitignore  Makefile  driver.c  driver.mod.c
addnum/: Makefile
app/: halo_http.c  halo_http.h  halo_product.h  halo_tcp_srv.c  halo_uart.c  halo_utf8.c
c/: hope_backup.tgz  servise
c/AI/: Makefile
c/Linux_Driver_Develop/: .gitignore
c/addnum/: addnum  addnum.c
c/app/: Makefile  common.c  common.h  halo_http_regist.h  halo_tcp_srv.h  halo_udp.c  main.c
c/ch3_simple_tcp/: CMakeCache.txt  Makefile  client.c  server  server.c
c/ch4_simple_udp/: client  client.c  ntp_copy.c  server  server.c  simple_ntp
c/check-net-connection/: a.out  check-ip-address.c  check-mac-address.c  check-net-connection.c
c/cmockery/: Makefile  math_test_run
c/comput_test/: a.out  main.c
c/config-reader/: config  config-reader.c  reader
c/define_calloc/: a.out  test.c
c/erpc-log/: erpc_log.cpp  erpc_log.h
c/feng_code/: MessageParser.kt  config.c  config.h  crc32.c  hash_nvram.c  hash_nvram.h  net_json.h
c/halo_0327/: Makefile  common.c  multitest  multitest.c
c/halo_0426/: Makefile  command.h  log.h  multicast.h  multitest.c  tcp_server_callback.c
c/halo_new/: readme.md
c/halo_test/: main_task  main_task.c  multi  multi.c
c/hash_table/: demo  hash_table.c  hash_table.h
c/hope_client/: Makefile  client.c
c/hope_halo/: Makefile  Makefile~  cloud_client.c  command.h  common.c  dispatchcmd.c  dispatchcmd.h  get_music_list.h  http_regist.md  multicast.c  tcp_server.c  tcp_server.h  tcp_server_callback.h
c/leecode/: .gitignore  .gitignore~  10  1025.c  119.c  13  15  15.c  17  172.c  2  20.c  357.c  383.c  451.c  5  551.c  677.c  678.c  707.c  926.c  a.out
c/leetcode/: .gitignore  100.相同的树.c  100.相同的树.cpp  1008.先序遍历构造二叉树.cpp  101.对称二叉树.cpp  102.二叉树的层序遍历.cpp  102.二叉树的层次遍历.cpp  104.二叉树的最大深度.cpp  105.从前序与中序遍历序列构造二叉树.cpp  106.从中序与后序遍历序列构造二叉树.cpp  107.二叉树的层次遍历-ii.cpp  109.有序链表转换二叉搜索树.cpp  11.c  110.平衡二叉树.cpp  111.二叉树的最小深度.cpp  112.路径总和.cpp  113.路径总和-ii.cpp  116.填充每个节点的下一个右侧节点指针.cpp  117.填充每个节点的下一个右侧节点指针-ii.cpp  118.c  119.c  1191.k-次串联后最大子数组之和.cpp  12.c  1239.c  130.被围绕的区域.cpp  133.克隆图.cpp  134.c  135.c  1371.每个元音包含偶数次的最长子字符串.cpp  138.复制带随机指针的链表.cpp  141.环形链表.cpp  142.c  142.环形链表-ii.cpp  144.二叉树的前序遍历.c  144.二叉树的前序遍历.cpp  145.二叉树的后序遍历.cpp  1465.切割后面积最大的蛋糕.cpp  152.c  155.最小栈.cpp  16.c  (+63 more)
c/md5/: test  test.c
c/md5test/: getdes  md5.h  test.c
c/microHttpd/: Makefile
c/mqtt_client_zizy/: buff_parse.c  buffer.c  parse_pipe.h  pub_list.c
c/multicast/: client  client.c  recv.c  server  server.c
c/opt/: Makefile  test_getopt  test_getopt.c  test_getopt_long  test_getopt_long.c
c/replace/: Makefile  core  replace
c/ruby_json/: cJSON_format.h  cJSON_old.c  main.c  tasks.json
c/seria_Ring_buf/: Makefile  demo_serial.c  serial
c/serial/: .gitignore  demo_serial.h
c/systime/: .gitignore  get_set_systime.c
c/tcp_rbuf/: .gitignore  Makefile  server.c  server.d
c/ten_c_tips/: a.out
c/thread_print/: thread_print.c
c/thread_tmp/: Makefile  main  main.c
c/tmp/: .gitignore  access.c  array_pointer.c  goto_switch.c  json_array.c  main.c  main.c~  malloc-o.c  sizeof-define.c  str_or.c  str_to_hex.c  time.c  uri_bug.c
c/url_filename/: main.c
c/utf8/: a.out  (+4 more)
ch3_simple_tcp/: CMakeLists.txt  client  cmake_install.cmake
ch4_simple_udp/: ntp  server.c  simple_ntp.c
cmake/: BUILD
cmake/wget/: CMakeLists.txt  dtu_utils.cmake
cmake/wget-custom/: CMakeLists.txt  dtu_wget.cmake
cmockery/: common.c  common.h  math.c  test_math.c
dispatch_0518_justtest/: main  main.c
feng_code/: MessageBuilder.kt  debug.h  net_json.c
halo_0327/: multicast.c  tcp_server.c
halo_0426/: dispatchcmd.c  tcp_server.c  tcp_server.h
halo_test/: Makefile  client  client.c
hash_table/: Makefile
hope_client/: client  cloud_client.h
hope_halo/: cloud_client.h  common.h  get_music_list.c  http_regist.c  http_regist.h  main.c  md5.c
leecode/: 10.c  13.c  14.c  16  17.c  2.c  20  3  3.c  6  6.c  7  7.c  8  8.c  80.c
md5/: Makefile  md5.h
md5test/: #Makefile#  des  test
mqtt_client_zizy/: Makefile  buff_parse.h  buffer.h  mqttclient  mqttclient.c  mqttclient.h  parse_pipe.c  pub_list.h
multicast/: Makefile  recv
opt/: test_getopt
python/: speech_demo.py
ruby_json/: Makefile
seria_Ring_buf/: demo_serial.d
serial/: a.out  demo_serial.c  demo_serial.d
sp_hope_smarthome/: Makefile
tcp_rbuf/: client  client.c  server
ten_c_tips/: main.c
test-serial/: recv  recv.c  send  send.c  serial_rs485.h  virtualCom.py
tmp/: a.out  array0.c  popen.c  sprintf.c
url_filename/: a.out
(+543 files in other folders)
